# Aurea

./: .editorconfig  .gitignore  README.md  io.github.cleomenezesjr.aurea.json  meson.build
.github/workflows/: build_flatpak.yml  python_lint_formatter.yml
data/: io.github.cleomenezesjr.aurea.desktop.in  io.github.cleomenezesjr.aurea.gschema.xml  io.github.cleomenezesjr.aurea.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  it.po  ka.po  meson.build  nb.po  pt_BR.po  ru.po  tr.po
src/: aurea.gresource.xml  aurea.in  main.py  meson.build  style.css  window.blp  window.py
src/gtk/: help-overlay.ui  window.blp
